# conjure

./: CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json
docs/: IDEAS.md
docs/plans/: 2026-03-06-mvp.md
src/: main.ts  style.css  ui.test.ts  ui.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: hotkey.rs  lib.rs  main.rs  palette.rs  permissions.rs  tray.rs
src-tauri/src/mru/: mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/windows/: activate.rs  enumerate.rs  mod.rs  types.rs
src-tauri/tests/: integration.rs
